RESOLVED FIXED11912
Overriding visibility does not behave as expected
https://bugs.webkit.org/show_bug.cgi?id=11912
Summary Overriding visibility does not behave as expected
Eric Seidel (no email)
Reported 2006-12-21 06:13:31 PST
Overriding visibility does not behave as expected Click on the "visibility" circle in the middle of the bottom row. Notice that the small green circle does not remain visible as expected. Should be a simple fix. Note that the small green circle remains clickable however.
Attachments
Fix (and 4 test cases) (30.79 KB, patch)
2006-12-22 05:46 PST, Eric Seidel (no email)
aroben: review+
Eric Seidel (no email)
Comment 1 2006-12-22 05:46:09 PST
Created attachment 11962 [details] Fix (and 4 test cases) The results here differ from Firefox. I'm not sure which is correct (since the spec doesn't say much). In any case, these tests exist to document our behavior.
Adam Roben (:aroben)
Comment 2 2006-12-22 09:55:50 PST
Comment on attachment 11962 [details] Fix (and 4 test cases) It would be great to have svn:eol-style native on the .svg files, and svn:mime-type image/png on the .png files. r=me
Eric Seidel (no email)
Comment 3 2006-12-22 09:58:38 PST
Note You need to log in before you can comment on or make changes to this bug.