2006-12-22  Eric Seidel  <eric@webkit.org>

Reviewed by aroben.

        http://bugs.webkit.org/show_bug.cgi?id=11912
        Overriding visibility does not behave as expected.

        * rendering/RenderSVGContainer.cpp:
        (WebCore::RenderSVGContainer::paint): allow children to draw when container is visibility='hidden'


Canonical link: https://commits.webkit.org/15439@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@18390 268f45cc-cd09-0410-ab3c-d52691b4dbfc